# napari-mrcfile-reader

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: test_and_deploy.yml
.napari/: config.yml
napari_mrcfile_reader/: __init__.py  mrcfile_reader.py
napari_mrcfile_reader/_tests/: test_mrcfile_reader.py
src/napari_mrcfile_reader/: __init__.py  _reader.py  napari.yaml
src/napari_mrcfile_reader/_tests/: test_reader.py
